Monomorphize functions